Adds head tag and title tag inside it file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <title>THe greatest and best title in the world</title>
+  </head>
   <body>
 Hello there, awesome person!
   </body>
