Adds an <h1> tag to file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>THe greatest and best title in the world</title>
   </head>
   <body>
+    <h1>A Land of Pure Imagnination</h1>
 Hello there, awesome person!
   </body>
 </html>
