--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
     <h1>A Land of Pure Imagnination</h1>
+    <img src="https://avatars.githubusercontent.com/u/74928787?v=4">
 Hello there, awesome person!
   </body>
 </html>
