Adds ordered list to file

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
     <title>THe greatest and best title in the world</title>
   </head>
   <body>
+    <div>
     <h1>A Land of Pure Imagnination</h1>
+    </div>
     <img src="https://avatars.githubusercontent.com/u/74928787?v=4">
+    <ol>
+      <li>Instagram</li>
+      <li>Twitter</li>
+      <li>GitHub</li>
 Hello there, awesome person!
   </body>
 </html>
