--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   </head>
   <body>
     <h1>A Land of Pure Imagnination</h1>
+    <div>
     <img src="https://avatars.githubusercontent.com/u/74928787?v=4">
+    </div>
 Hello there, awesome person!
+    <ol>
+      <li>Instagram</li>
+      <li>Twitter</li>
+      <li>GitHub</li>
+    </ol>
   </body>
 </html>
