--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </div>
 Hello there, awesome person!
     <ol>
-      <li>Instagram</li>
-      <li>Twitter</li>
-      <li>GitHub</li>
+      <li><a href="https://www.instagram.com/?hl=en">Instagram</a></li>
+      <li><a href="https://twitter.com/?lang=en">Twitter</a></li>
+      <li><a href="https://github.com/">GitHub</a></li>
     </ol>
   </body>
 </html>
