Creates link to stylesheet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="style.css">
     <title>THe greatest and best title in the world</title>
   </head>
   <body>
